bug-fix attempt - z-index of background

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   background: $cream;
+  opacity: .99;
   font-family: Times, serif;
   font-size: $m-size;
 }
